--- a/RyanOtt-CV.tex
+++ b/RyanOtt-CV.tex
@@ -219,7 +219,7 @@
 \textbf{Programming} & Python, PyTorch, TensorFlow, Pandas, C\#, Java, SQL, HTML, CSS, Git, LaTeX
 \end{tabularx}
 
-% \vfill
+\vfill
 \center{\footnotesize Last updated: \today}
 
 \end{document}
