Update GPA to US system

--- a/RyanOtt-CV.tex
+++ b/RyanOtt-CV.tex
@@ -192,9 +192,9 @@
 %----------------------------------------------------------------------------------------
 \section{Education}
 \begin{tabularx}{\linewidth}{@{}l X@{}}	
-2023 - present & MSc Artificial Intelligence at \textbf{Universiteit van Amsterdam} \hfill \normalsize GPA: 8.1/10 \\
+2023 - present & MSc Artificial Intelligence at \textbf{Universiteit van Amsterdam} \hfill \normalsize GPA: 4.0 \\
 
-2020 - 2023 & BSc Artificial Intelligence at \textbf{Vrije Universiteit Amsterdam} \hfill GPA: 8.4/10 \\ 
+2020 - 2023 & BSc Artificial Intelligence at \textbf{Vrije Universiteit Amsterdam} \hfill GPA: 4.0 \\ 
 
 2019 - 2020 & Bachelor of Information Technology at \textbf{Inholland Haarlem}\hfill  \\
 
