--- a/RyanOtt-CV.tex
+++ b/RyanOtt-CV.tex
@@ -183,7 +183,7 @@
 \begin{tabularx}{\linewidth}{ @{}l r@{} }
 \textbf{Investigating Visually Grounded Language Embeddings}\\% & \hfill \href{https://some-link.com}{Link to Demo} \\[3.75pt]
 \multicolumn{2}{@{}X@{}}{
-    Research project, probing the language embedding space of a pre-trained vision-and-language model to understand how incorporating visual information affects the language embeddings. First place at the UvA \textit{Interpretability and Explainbility in AI} conference.
+    Research project, probing the language embedding space of a pre-trained vision-and-language model to understand how incorporating visual information affects the language embeddings. Won first place at the UvA \textit{Interpretability and Explainbility in AI} conference in 2024.
 }\\
 \end{tabularx}
 
@@ -216,7 +216,7 @@
 \section{Skills}
 \begin{tabularx}{\linewidth}{@{}l X@{}}
 \textbf{Languages} & English (native), German (native), Dutch (native), Russian (elementary) \\
-\textbf{Programming} & Python, PyTorch, TensorFlow, Pandas, C\#, Java, SQL, HTML, CSS, Git, LaTeX
+\textbf{Programming} & Python, PyTorch, TensorFlow, Pandas, C\#, Java, SQL, HTML, CSS, Git, \LaTeX
 \end{tabularx}
 
 \vfill
