--- a/citations.bib
+++ b/citations.bib
@@ -1,13 +1,8 @@
-@article{dummypaper,
-  title    = {Paper: This is the name of the paper },
-  volume   = {99},
-  url      = {https://some-link.com},
-  abstract = {},
-  number   = {18},
-  journal  = {Some Journal},
-  author   = {Last Name, First Name and Other Last Name, First Name},
-  month    = sep,
-  year     = {2019},
-  keywords = {some keyword, another keyword},
-  pages    = {2200--2300}
+@article{anonymous2024studying,
+  title   = {{\textquotedblleft}Studying How to Efficiently and Effectively Guide Models with Explanations{\textquotedblright} - A Reproducibility Study},
+  author  = {Adrian Sauter, Milan Miletić, Ryan Ott, Rohith Saai Pemmasani Prabakaran},
+  journal = {Submitted to Transactions on Machine Learning Research},
+  year    = {2024},
+  url     = {https://openreview.net/forum?id=9ZzASCVhDF},
+  note    = {Under review}
 }
