--- a/citations.bib
+++ b/citations.bib
@@ -1,6 +1,6 @@
 @article{anonymous2024studying,
   title   = {{\textquotedblleft}Studying How to Efficiently and Effectively Guide Models with Explanations{\textquotedblright} - A Reproducibility Study},
-  author  = {Adrian Sauter, Milan Miletić, Ryan Ott, Rohith Saai Pemmasani Prabakaran},
+  author  = {Adrian Sauter et al.},
   journal = {Submitted to Transactions on Machine Learning Research},
   year    = {2024},
   url     = {https://openreview.net/forum?id=9ZzASCVhDF},
