--- a/citations.bib
+++ b/citations.bib
@@ -1,5 +1,5 @@
 @article{anonymous2024studying,
-  title   = {{\textquotedblleft}Studying How to Efficiently and Effectively Guide Models with Explanations{\textquotedblright} - A Reproducibility Study},
+  title   = {Studying How to Efficiently and Effectively Guide Models with Explanations - A Reproducibility Study},
   author  = {Adrian Sauter et al.},
   journal = {Submitted to Transactions on Machine Learning Research},
   year    = {2024},
