Updated citation post publication, formatting and rewording

--- a/RyanOtt-CV.tex
+++ b/RyanOtt-CV.tex
@@ -139,33 +139,31 @@
 \textbf{AI for Space Standards Analysis} | European Space Agency & \hfill Noordwijk, Aug 2024 - Oct 2024 \\[3.75pt]
 \multicolumn{2}{@{}X@{}}{
     \begin{minipage}[t]{\linewidth}
-        Responsible for developing AI models to analyze and predict new space standard requirement documents.
+        Responsible for creating AI models and NLP pipelines to analyze and predict new space standard requirements documents. Developed a fine-tuned language embedding model for ESA applicable standards such as ECSS, ISO and CCSDS.
     \end{minipage}
-}  \\
+}
 \end{tabularx}
 
 \begin{tabularx}{\linewidth}{ @{}l r@{} }
 \textbf{Checkout, Product Management} | Adyen & \hfill Amsterdam, Apr 2023 - Jul 2024 \\[3.75pt]
 \multicolumn{2}{@{}X@{}}{
     \begin{minipage}[t]{\linewidth}
-        Managing the deprecation of a legacy feature in Adyen's Checkout and refining the product's documentation.
-        \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
-            \item[--] Topic extraction and sentiment analysis of internal communications to improve technical documentation.
-            \item[--] Collaborated with Account Management teams both internal and external to ensure smooth transition for merchants.
+        Managing the deprecation of a legacy feature in Adyen's online payments Checkout product.
+        \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=2pt]
+            \item[\cdot] Handling the coordination between Account Management, Legal and Technical teams both internal and external to ensure smooth transition for merchants.
+            \item[\cdot] Topic extraction and sentiment analysis of internal communications to improve technical documentation.
         \end{itemize}
     \end{minipage}
 }
 \end{tabularx}
 
+\vspace{-15pt} % Adjust this value to reduce the space
+
 \begin{tabularx}{\linewidth}{ @{}l r@{} }
 \textbf{Technical Support} | Adyen & \hfill Amsterdam, Nov 2021 - Apr 2023 \\[3.75pt]
 \multicolumn{2}{@{}X@{}}{
     \begin{minipage}[t]{\linewidth}
-        Customer facing role, responsible for setting up and configuring merchant accounts.
-        \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
-            \item[--] Collaborated with financial teams to handle acquiring of funds and settlements.
-            \item[--] Worked with developers to integrate payment methods and provide technical support.
-        \end{itemize}
+        Customer facing role, responsible for configuring merchant accounts through Adyen's API. Collaborated with Financial teams to handle acquiring of funds and settlements. Worked with Development teams to better integrate payment methods and provide support through Python automation scripts.
     \end{minipage}
 }
 \end{tabularx}
@@ -176,7 +174,7 @@
 \begin{tabularx}{\linewidth}{ @{}l r@{} }
 \textbf{Transformer for Summarisation}\\% & \hfill \href{https://some-link.com}{Link to Demo} \\[3.75pt]
 \multicolumn{2}{@{}X@{}}{
-    Bachelor thesis project, implementing and training an encoder-decoder transformer model from scratch on only a single GPU in 12 hours to generate summaries of news articles.
+    Bachelor thesis project, implementing and training an encoder-decoder transformer model from scratch under tight resource constraints to generate abstracts of news articles.
 }\\
 \end{tabularx}
 
@@ -216,7 +214,7 @@
 \section{Skills}
 \begin{tabularx}{\linewidth}{@{}l X@{}}
 \textbf{Languages} & English (native), German (native), Dutch (native), Russian (elementary) \\
-\textbf{Programming} & Python, PyTorch, TensorFlow, Pandas, C\#, Java, SQL, HTML, CSS, Git, \LaTeX
+\textbf{Programming} & Python, PyTorch, TensorFlow, Sklearn, Scipy, Numpy, Pandas, C\#, Java, SQL, HTML, CSS, Git, Linux, \LaTeX
 \end{tabularx}
 
 \vfill
