--- a/citations.bib
+++ b/citations.bib
@@ -1,8 +1,9 @@
-@article{anonymous2024studying,
-  title   = {Studying How to Efficiently and Effectively Guide Models with Explanations - A Reproducibility Study},
-  author  = {Adrian Sauter et al.},
-  journal = {Submitted to Transactions on Machine Learning Research},
+@article{sauter2024studying,
+  title   = {{\textquotedblleft}Studying How to Efficiently and Effectively Guide Models with Explanations{\textquotedblright} - A Reproducibility Study},
+  author  = {Adrian Sauter and Milan Mileti{\'c} and Ryan Ott and Rohith Saai Pemmasani Prabakaran},
+  journal = {Transactions on Machine Learning Research},
+  issn    = {2835-8856},
   year    = {2024},
   url     = {https://openreview.net/forum?id=9ZzASCVhDF},
-  note    = {Under review}
+  note    = {}
 }
